--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def flutterVersionCode = { -> project.hasProperty('flutterVersionCode') ? project.flutterVersionCode : 1 }
+def flutterVersionName = { -> project.hasProperty('flutterVersionName') ? project.flutterVersionName : '1.0' }
+
 android {
     namespace = "com.example.test_app_lesson"
     compileSdk = flutter.compileSdkVersion
@@ -26,7 +29,7 @@ android {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
+        versionCode flutterVersionCode.toInteger()
         versionName = flutter.versionName
     }
 
