--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,9 +5,6 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
-def flutterVersionCode = { -> project.hasProperty('flutterVersionCode') ? project.flutterVersionCode : 1 }
-def flutterVersionName = { -> project.hasProperty('flutterVersionName') ? project.flutterVersionName : '1.0' }
-
 android {
     namespace = "com.example.test_app_lesson"
     compileSdk = flutter.compileSdkVersion
@@ -29,7 +26,7 @@ android {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
+        versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
